--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "ducks-4-da-duck-god",
+  "name": "threejs-journey-exercise",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build": "vite build"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-react": "3.0",
+    "vite": "^4.0.4"
+  },
+  "dependencies": {
+    "react": "18.2",
+    "react-dom": "18.2"
   }
 }
