--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "3.0",
-    "vite": "^4.0.4"
+    "@vitejs/plugin-react": "3.0"
   },
   "dependencies": {
+    "@react-three/drei": "^9.57.0",
     "react": "18.2",
     "react-dom": "18.2"
   }
